traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur) {
    ^