traversal.snake.Snake.scala.code
override def run() {
  def posfin():Boolean = {
    if (estFaceMur) {
      gauche(); if (estFaceMur) {
        droite();
        return true
      }
    return false
    }
  }
}